# ALICE-Zip

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ja.md  TRADEMARK_NOTICE  pyproject.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
alice_zip/: __init__.py  analyzers.py  cli.py  core.py  generators.py  media_generators.py  native_accelerator.py  residual_compression.py
benchmarks/: run_benchmarks.py
bindings/: README.md
bindings/cpp/: CMakeLists.txt  alice.hpp
bindings/cpp/AliceZip.UE5/: AliceZip.uplugin
bindings/cpp/AliceZip.UE5/Source/AliceZip/: AliceZip.Build.cs
bindings/cpp/AliceZip.UE5/Source/AliceZip/Private/: AliceZipLibrary.cpp  AliceZipModule.cpp
bindings/cpp/AliceZip.UE5/Source/AliceZip/Public/: AliceZipLibrary.h  AliceZipModule.h
bindings/cpp/examples/: compression_example.cpp  perlin_example.cpp
bindings/cpp/tests/: test_alice.cpp
bindings/csharp/AliceZip.Unity/: package.json
bindings/csharp/AliceZip.Unity/Runtime/: AliceTextureGenerator.cs  AliceZip.Runtime.asmdef  AliceZip.cs
libalice/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  pyproject.toml
libalice-enterprise/: Cargo.toml  LICENSE  README.md
libalice-enterprise/src/: lib.rs
libalice-enterprise/src/access/: mod.rs
libalice-enterprise/src/license/: key.rs  mod.rs
libalice-enterprise/src/security/: crypto.rs  kdf.rs  mod.rs
libalice/python/libalice/: __init__.py
libalice/src/: analyzer.rs  codec_bridge.rs  ffi.rs  format.rs  lib.rs  residual.rs
libalice/src/compression/: mod.rs
libalice/src/generators/: fourier.rs  mod.rs  perlin.rs  polynomial.rs
libalice/src/media/: audio.rs  image.rs  mod.rs
src/: lib.rs
tests/: test_alice_zip.py  test_comprehensive.py  test_core.py  test_generators.py  test_media_generators.py  test_native_accelerator.py  test_quant_simple.py  test_quantization.py  test_quantization_fast.py  test_real_image.py  test_residual_compression.py
