[package]
name = "alice-zip-enterprise"
version = "1.0.0"
edition = "2021"
authors = ["Moroya Sakamoto <sakamoto@example.com>"]
description = "ALICE-Zip Enterprise Edition - Commercial features for ALICE-Zip compression"
license = "Proprietary"
keywords = ["compression", "enterprise", "security", "license"]
categories = ["compression", "cryptography"]

[lib]
name = "alice_enterprise"
crate-type = ["rlib"]

[dependencies]
# Core ALICE-Zip library
alice-zip = { path = "../libalice" }

# Cryptography
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
sha2 = "0.10"
hkdf = "0.12"

# Random & Security
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = "0.2"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"

# Bitflags for feature flags
bitflags = "2.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["security", "license"]
security = []
license = []
access-control = ["security"]
full = ["security", "license", "access-control"]

[dev-dependencies]
tempfile = "3.10"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
