[package]
name = "alice-zip"
version = "2.2.0"
edition = "2021"
authors = ["Moroya Sakamoto <sakamoto@example.com>"]
description = "A next-generation procedural compression engine utilizing Kolmogorov complexity approximation."
readme = "../README.md"
repository = "https://github.com/ext-sakamoro/ALICE-Zip"
license = "MIT"
keywords = ["compression", "lossless", "procedural", "cli"]
categories = ["compression", "command-line-utilities", "science"]
exclude = [
    "tests/commercial_data/*",
    "commercial/*",
    ".github/*"
]

[lib]
name = "alice_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "alice"
path = "src/bin/alice.rs"

[dependencies]
# Python bindings (optional for CLI)
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

# FFT for Fourier transforms
rustfft = "6.2"

# Parallel processing
rayon = "1.10"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Compression
lzma-rs = "0.3"
flate2 = "1.1"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[features]
default = ["cli"]
cli = []
python = ["dep:pyo3", "dep:numpy"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = false
